--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,53 +13,48 @@
         const eventSelect = document.getElementById("event");
         const eventContainer = document.getElementById("event-container");
         const note = document.querySelector(".note");
-        const payNowContainer = document.getElementById("pay-now-container");
         const collegeSelect = document.getElementById("college");
+        const textContainer = document.getElementById("text-container");
         const collegeInputContainer = document.getElementById(
           "college-input-container"
         );
-        const qrPayment = document.getElementById("qr-payment");
+        const otherCollegeEvent = document.getElementById(
+          "event-container-other"
+        );
+        const totalAmount = document.getElementById("total");
 
         collegeSelect.addEventListener("change", function () {
+          textContainer.style.display = "block";
           if (collegeSelect.value === "other") {
             collegeInputContainer.style.display = "block";
+            otherCollegeEvent.style.display = "block";
+            totalAmount.style.display = "block";
             eventContainer.style.display = "none";
             eventSelect.removeAttribute("required");
-            note.textContent = "Participation Fee: ₹800";
-            payNowContainer.innerHTML =
-              '<a href="upi://pay?pa=sristijgec@sbi&pn=SRISTIJALPAIGURI%20GOVT%20ENGG%20COLLEGE&mc=8220&tr=&tn=&am=800&cu=INR&url=&mode=02&purpose=00&orgid=180102&sign=MEQCIBpUcu1IGX07X7+IPlV6AYfA43SSwUaV/VV+19w2cIRNAiA0qD2s6BqIza4HZhd9M2SPsSdCp8ShUlbDql6V7SviQQ==" class="pay-now-btn">PAY NOW</a>';
-            qrPayment.innerHTML =
-              '<img src="./assets/pay-800-sristi.svg" class="qr-img"/>';
+            note.textContent = "";
+            additional.textContent = "";
           } else {
             collegeInputContainer.style.display = "none";
+            otherCollegeEvent.style.display = "none";
+            totalAmount.style.display = "none";
             eventContainer.style.display = "block";
             eventSelect.setAttribute("required", "required");
             note.textContent =
               "Participation Fee: Event 1 or 2 - ₹500, Both (1+2) - ₹800";
-            payNowContainer.innerHTML = "";
-            qrPayment.innerHTML = "";
 
             eventSelect.addEventListener("change", function () {
               if (eventSelect.value === "both") {
-                note.textContent = "Participation Fee: ₹800";
-                payNowContainer.innerHTML =
-                  '<a href="upi://pay?pa=sristijgec@sbi&pn=SRISTIJALPAIGURI%20GOVT%20ENGG%20COLLEGE&mc=8220&tr=&tn=&am=800&cu=INR&url=&mode=02&purpose=00&orgid=180102&sign=MEQCIBpUcu1IGX07X7+IPlV6AYfA43SSwUaV/VV+19w2cIRNAiA0qD2s6BqIza4HZhd9M2SPsSdCp8ShUlbDql6V7SviQQ==" class="pay-now-btn">PAY NOW</a>';
-                qrPayment.innerHTML =
-                  '<img src="./assets/pay-800-sristi.svg" class="qr-img"/>';
+                note.textContent = "Participation Fee: ₹800 + 2.36% GST & tax";
+                additional.textContent = "";
               } else if (
                 eventSelect.value === "event1" ||
                 eventSelect.value === "event2"
               ) {
-                note.textContent = "Participation Fee: ₹500";
-                payNowContainer.innerHTML =
-                  '<a href="upi://pay?pa=sristijgec@sbi&pn=SRISTIJALPAIGURI%20GOVT%20ENGG%20COLLEGE&mc=8220&tr=&tn=&am=500&cu=INR&url=&mode=02&purpose=00&orgid=180102&sign=MEQCIBpUcu1IGX07X7+IPlV6AYfA43SSwUaV/VV+19w2cIRNAiA0qD2s6BqIza4HZhd9M2SPsSdCp8ShUlbDql6V7SviQQ==" class="pay-now-btn">PAY NOW</a>';
-                qrPayment.innerHTML =
-                  '<img src="./assets/pay-500-sristi.svg" class="qr-img"/>';
+                note.textContent = "Participation Fee: ₹500 + 2.36% GST & tax";
+                additional.textContent = "";
               } else {
                 note.textContent =
                   "Participation Fee: Event 1 or 2 - ₹500, Both (1+2) - ₹800";
-                payNowContainer.innerHTML = "";
-                qrPayment.innerHTML = "";
               }
             });
           }
@@ -106,6 +101,33 @@
                 ? 800
                 : 500;
 
+            if (document.getElementById("college").value === "jgec") {
+              event =
+                document.getElementById("event").value === ""
+                  ? "selected"
+                  : document.getElementById("event").value;
+
+              formData.amount =
+                document.getElementById("event").value === "both" ? 820 : 513;
+              formData.event = event;
+              // console.log(formData.amount);
+            } else {
+              
+              var eventButtons = document.querySelectorAll(".checkbox");
+              var events = "";
+              eventButtons.forEach((button) => {
+                if (button.classList.contains("selected")) {
+                  //console.log(button.getAttribute("data"));
+                  events += button.getAttribute("data") + ", ";
+                }
+                formData.event = events;
+                //console.log(formData.event);
+                formData.amount = parseInt(
+                  document.getElementById("totalAmount").textContent
+                );
+                //console.log(formData.amount);
+              });
+            }
             formData.collegeName =
               document.getElementById("college").value === "jgec"
                 ? "Jalpaiguri Government Engineering College"
@@ -123,7 +145,7 @@
 
               const response = await fetch(
                 "https://form-for-faild-registration-34q8.vercel.app/",
-              //  "http://localhost:4000",
+                 // "http://localhost:4000",
                 {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
@@ -146,9 +168,9 @@
                 alert("Registration successful!");
                 console.log(response);
                 resetFormFields();
-                setTimeout(function() {
-        window.location.href = "confirmation.html";
-    },);
+                setTimeout(function () {
+                  window.location.href = "confirmation.html";
+                });
               } else if (response.status == 400) {
                 alert("User Already Registered!");
               } else {
@@ -174,9 +196,9 @@
             "Participation Fee: Event 1 or 2 - ₹500, Both (1+2) - ₹800";
           document.getElementById("pay-now-container").innerHTML = "";
           document.getElementById("fileName").textContent = "";
-          setTimeout(function() {
-        window.location.href = "confirmation.html";
-    }, 1000);
+          setTimeout(function () {
+            window.location.href = "confirmation.html";
+          }, 1000);
         }
 
         async function uploadToCloudinary(file) {
@@ -192,7 +214,7 @@
               body: formData,
             }
           );
-          if (response.status == 400){
+          if (response.status == 400) {
             alert("Faild to upload image");
             throw new Error("Failed to upload image");
           }
@@ -338,6 +360,75 @@
             </select>
           </div>
 
+          <div id="event-container-other" class="label-item hidden">
+            <label for="event-other-college">Select Event</label>
+            <div class="checkbox-container">
+              <button
+                type="button"
+                class="checkbox"
+                value="205"
+                data="code chronicles"
+                onclick="selectButton(this)"
+              >
+                CODE CHRONICLES - ₹200
+              </button>
+              <button
+                type="button"
+                class="checkbox"
+                value="1229"
+                data="mazemerise & robosoccer"
+                onclick="selectButton(this)"
+              >
+                MAZEMERISE & ROBOSOCCER - ₹1200
+              </button>
+              <button
+                type="button"
+                class="checkbox"
+                value="205"
+                data="css battle"
+                onclick="selectButton(this)"
+              >
+                CSS BATTLE - ₹200
+              </button>
+              <button
+                type="button"
+                class="checkbox"
+                value="513"
+                data="techzibition"
+                onclick="selectButton(this)"
+              >
+                TECHZIBITION - ₹500
+              </button>
+              <button
+                type="button"
+                class="checkbox"
+                value="103"
+                data="mathemania"
+                onclick="selectButton(this)"
+              >
+                MATHEMANIA - ₹100
+              </button>
+              <button
+                type="button"
+                class="checkbox"
+                value="513"
+                data="bplan"
+                onclick="selectButton(this)"
+              >
+                B PLAN - ₹500
+              </button>
+              <button
+                type="button"
+                class="checkbox all-button"
+                value="2560"
+                data="all"
+                onclick="selectAll(this)"
+              >
+                ALL - ₹2500
+              </button>
+            </div>
+          </div>
+
           <!-- <p class="note">
             Participation Fee: Event 1 or 2 - ₹500, Both (1+2) - ₹800
           </p>
@@ -346,9 +437,19 @@
           </div>
 
           <div id="pay-now-container" class="hide-on-desktop"></div> -->
+          <div id="text-container">
+            <p class="note">
+              Participation Fee: Event 1 or 2 - ₹500, Both (1+2) - ₹800
+            </p>
+            <div id="total">
+              Total: ₹<span id="totalAmount">0</span> (2.36% GST)
+            </div>
+          </div>
 
           <div class="label-item">
-            <label for="payment">Upload Payment Screenshot sent on your mail</label>
+            <label for="payment"
+              >Upload Payment Screenshot sent on your mail</label
+            >
             <input
               type="file"
               id="payment"
@@ -364,5 +465,7 @@
         </form>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
